# banger-readme

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: aesthetics-and-visual-design.md  anatomy-of-a-readme.md  anti-patterns.md  checklist-and-sources.md  emerging-patterns.md  examples-audit.md  examples.md  exemplary-readmes.md  project-hygiene.md  readme-best-practices-research.md  scoring-engine-design.md  tools-and-companion-docs.md  why-readmes-matter.md
docs/ml-roadmap/: README.md  stage-0-text-quality.md  stage-1-image-heuristics.md  stage-2-image-similarity.md  stage-3-link-checking.md  stage-4-multi-language.md
plugin/.plugin/: plugin.json
plugin/skills/banger-readme/: SKILL.md
src/: config.rs  git.rs  install.rs  main.rs  plugin.rs
src/score/: antipatterns.rs  content.rs  engine.rs  funnel.rs  hygiene.rs  image_heuristics.rs  image_similarity.rs  link_check.rs  mod.rs  multi_lang.rs  report.rs  rules.rs  text_quality.rs  visuals.rs
